# capture-thread

./: CMakeLists.txt  README.md  archive.sh
common/: callback-queue.cc  callback-queue.h  log-text.cc  log-text.h  log-values.cc  log-values.h
demo/: README.md  callback-queue.cc  callback-queue.h  logging.cc  logging.h  main.cc  test.cc  tracing.cc  tracing.h
example/: async.cc  connection.cc  framework.cc  function.cc  inherit.cc  limit.cc  manual.cc  mock.cc  multi.cc  paths.cc  simple.cc  speed.cc  threaded.cc  throttle.cc  trace.cc
include/: thread-capture.h  thread-crosser.h  thread-local.h
src/: thread-crosser.cc
test/: log-text.cc  log-text.h  log-values.cc  log-values.h  readme-test.cc  test.cc  thread-capture-test.cc  thread-crosser-test.cc
